fixed profile editing and exceptions