@@ -1,6 +1,7 @@
 package com.example.demo.service.impl;
 
 import com.example.demo.dto.EventDTO;
+import com.example.demo.exception.ResourceNotFoundException;
 import com.example.demo.mapper.EventMapper;
 import com.example.demo.model.Event;
 import com.example.demo.repository.EventRepository;
@@ -8,7 +9,6 @@ import com.example.demo.service.EventService;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class EventServiceImpl implements EventService {
@@ -25,25 +25,30 @@ public class EventServiceImpl implements EventService {
 
     @Override
     public List<EventDTO> getAllEvents() {
-        return eventRepository.findAll()
-                .stream()
+        return eventRepository.findAll().stream()
                 .map(EventMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public Event getEventById(Long id) {
         return eventRepository.findById(id)
-                .orElseThrow(() -> new IllegalArgumentException("Event not found with ID: " + id));
+                .orElseThrow(() -> new ResourceNotFoundException("Event not found with ID: " + id));
     }
 
     @Override
     public Event updateEvent(Event event) {
+        if (!eventRepository.existsById(event.getId())) {
+            throw new ResourceNotFoundException("Event not found with ID: " + event.getId());
+        }
         return eventRepository.save(event);
     }
 
     @Override
     public void deleteEvent(Long id) {
+        if (!eventRepository.existsById(id)) {
+            throw new ResourceNotFoundException("Event not found with ID: " + id);
+        }
         eventRepository.deleteById(id);
     }
 }
